updated claim view

--- a/styles/index.css
+++ b/styles/index.css
@@ -56,3 +56,15 @@ li {
 .arrow{
   padding-top: .5em;
 }
+
+/* map */
+/* set map height to 100 */
+#map {
+  height: 100%;
+}
+/* Makes the sample page fill the window. */
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
