--- a/views/claim.html
+++ b/views/claim.html
@@ -58,29 +58,23 @@
 <!-- map -->
     <div id='map' class='container'>
       <div class='row map'>
-        map goes here
+        <div id="map"></div>
       </div>
     </div>
-
-    <div id='info' class='container'>
-      <p class='section-description'>
-        "information about the selected task shows here"
-      </p>
-    </div>
-
-
-    <div class='button-task'>
-      <button type="button" class="btn btn-primary btn-lg" onclick="location.href = 'complete.html';">Claim This Task</button>
-    </div>
-
-
-
 
 
     <!-- bootstrap -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+    <!-- map stuff -->
+    <div id="map"></div>
+    <script src= "https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBClxKsc13LsLck6Va7XD-tdzxiHS--NE8&callback=initMap">
+    </script>
+    <script src ="../index.js"></script>
 
   </body>
 </html>
