--- a/views/claim.html
+++ b/views/claim.html
@@ -75,6 +75,7 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBClxKsc13LsLck6Va7XD-tdzxiHS--NE8&callback=initMap">
     </script>
     <script src ="../index.js"></script>
+    <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDfEFhZmKM_XLu_Qr6dQuPO7fcKrxrj-0Y'></script>
 
   </body>
 </html>
