Tyler's side of code

--- a/views/home.html
+++ b/views/home.html
@@ -14,10 +14,10 @@
     <img src='../images/high-five.png'id='logo'>
     <h1 class='title'>"Name of App"</h1>
 
-    <div class="container">
+    <div class="container" id="options">
       <div class='row home-cards'>
         <!-- first card -->
-        <div class='col-md-3 card'>
+        <div class='col-md-4 card'>
           <button type="button" class="btn btn-primary btn-lg" onclick="location.href = 'claim.html';">Claim a Task</button>
           <div class="card-body">
             <p class="card-text">Go to community service and verification tasks.</p>
@@ -25,7 +25,7 @@
         </div>
 
         <!-- second card -->
-        <div class='col-md-3 card'>
+        <div class='col-md-4 card'>
           <button type="button" class="btn btn-primary btn-lg" onclick="location.href = 'reward.html';">See Your Rewards</button>
           <div class="card-body">
             <p class="card-text">View Rewards you have yet to redeem.</p>
@@ -33,7 +33,7 @@
         </div>
 
         <!-- third card -->
-        <div class='col-md-3 card'>
+        <div class='col-md-4 card'>
           <button type="button" class="btn btn-primary btn-lg" onclick="location.href = 'post.html';">Post a Task</button>
           <div class="card-body">
             <p class="card-text eventbrite">Post a community service task to be claimed by community members.</p>
