--- a/views/complete.html
+++ b/views/complete.html
@@ -8,6 +8,7 @@
     <!--  keep this above all other css stylesheets!!!  -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/index.css">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
   </head>
 
   <body>
@@ -58,11 +59,11 @@
 
     <!-- task -->
 
-    <div id='info' class='container'>
+    <!-- <div id='info' class='container'>
       <p class='section-description'>
         "information about the selected task shows here"
       </p>
-    </div>
+    </div> -->
 
 
     <div class='button-task'>
