--- a/views/reward.html
+++ b/views/reward.html
@@ -2,9 +2,61 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <title>Map</title>
+    <link rel="shortcut icon" href="../images/high-five.png"/>
+    <!--  keep this above all other css stylesheets!!!  -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="../styles/index.css">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
   </head>
+
   <body>
-    <h1>"Rewards"</h1>
-  </body>
-</html>
+
+    <!-- navbars -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">
+        <img src="../images/high-five.png" width="50" height="50" alt="">
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link active" href="home.html">Home <span class="sr-only">(current)</span></a>
+        </div>
+      </div>
+    </nav>
+
+    <nav id="navbar" class="navbar navbar-light">
+      <ul class="nav nav-pills">
+        <li class="nav-item">
+          <a class="nav-link" href="claim.html">Claim a Task</a>
+        </li>
+        <a class="arrow">></a>
+        <li class="nav-item">
+          <a class="nav-link" href="complete.html">Complete the Task</a>
+        </li>
+        <a class="arrow">></a>
+        <li class="nav-item">
+          <a class="nav-link" href="">Verify the Task</a>
+        </li>
+        <a class="arrow">></a>
+        <li class="nav-item">
+          <a class="nav-link" href="">Get Rewarded</a>
+        </li>
+      </ul>
+    </nav>
+    <div data-spy="scroll" data-target="#navbar-example2" data-offset="0">
+    </div>
+    <!-- end navbar -->
+
+    <img src=''id='logo'>
+    <h1 class='title'>Your Rewards</h1>
+
+
+
+
+    <!-- task -->
+
+    </div>
