--- a/views/verify.html
+++ b/views/verify.html
@@ -8,6 +8,7 @@
     <!--  keep this above all other css stylesheets!!!  -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/index.css">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
   </head>
 
   <body>
@@ -57,11 +58,11 @@
 
 
     <!-- task -->
-
+    <h1 class="title"> A fellow community member verified you. </h1>
 
 
     <div class='button-task'>
-      <button type="button" class="btn btn-primary btn-lg" onclick="location.href = 'verify.html';">Complete</button>
+      <button type="button" class="btn btn-primary btn-lg" onclick="location.href = 'reward.html';">Go To Rewards</button>
     </div>
 
 
