--- a/views/home.html
+++ b/views/home.html
@@ -8,16 +8,17 @@
     <!--  keep this above all other css stylesheets!!!  -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/index.css">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
   </head>
 
   <body>
     <img src='../images/high-five.png'id='logo'>
-    <h1 class='title'>"Name of App"</h1>
+    <h1 class='title'>Good Works</h1>
 
     <div class="container">
       <div class='row home-cards'>
         <!-- first card -->
-        <div class='col-md-3 card'>
+        <div class='col-md-4 card'>
           <button type="button" class="btn btn-primary btn-lg" onclick="location.href = 'claim.html';">Claim a Task</button>
           <div class="card-body">
             <p class="card-text">Go to community service and verification tasks.</p>
@@ -25,7 +26,7 @@
         </div>
 
         <!-- second card -->
-        <div class='col-md-3 card'>
+        <div class='col-md-4 card'>
           <button type="button" class="btn btn-primary btn-lg" onclick="location.href = 'reward.html';">See Your Rewards</button>
           <div class="card-body">
             <p class="card-text">View Rewards you have yet to redeem.</p>
@@ -33,7 +34,7 @@
         </div>
 
         <!-- third card -->
-        <div class='col-md-3 card'>
+        <div class='col-md-4 card'>
           <button type="button" class="btn btn-primary btn-lg" onclick="location.href = 'post.html';">Post a Task</button>
           <div class="card-body">
             <p class="card-text eventbrite">Post a community service task to be claimed by community members.</p>
@@ -44,7 +45,7 @@
     </div>
 
     <div class="container">
-      <h1 class>How it Works</h1>
+      <h2 class='title'>How it Works</h2>
       <div class="content">
         <p>Claiming a Task: When you click "Claim a Task, you'll see pins on a map of 2 different types of tasks waiting to be completed in your area: community service tasks and verification tasks.</p>
         <ul>
