--- a/styles/index.css
+++ b/styles/index.css
@@ -15,8 +15,12 @@
   /* padding-right: 25px;
   padding-left: 25px;
   padding-bottom: 25px;*/
-  margin: 20px;
 }
+
+#map {
+  margin: 0 auto;
+}
+
 .card{
   padding-top: 10px;
   border-color: none;
