--- a/views/complete.html
+++ b/views/complete.html
@@ -59,9 +59,11 @@
     <!-- task -->
 
     <div id='info' class='container'>
-      <p class='section-description'>
+      <h2 >Task Type: <span id='type'></span></h2>
+      <p class='section-description' id='description'>
         "information about the selected task shows here"
       </p>
+      <p id='location'></p>
     </div>
 
 
@@ -77,6 +79,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="../complete.js"></script>
 
   </body>
 </html>
