--- a/views/home.html
+++ b/views/home.html
@@ -12,7 +12,7 @@
 
   <body>
     <img src='../images/high-five.png'id='logo'>
-    <h1 class='title'>"Name of App"</h1>
+    <h1 class='title'>Good Works</h1>
 
     <div class="container" id="options">
       <div class='row home-cards'>
